  03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> +metadata.xml:
  setup layout